# Programacion-estructurada-Roberto-Cardenas

./: CMakeLists.txt  README.md
EJERCICIO ESTRUCTURAS/: estudiante.c  estudiante.h  main.c  main.h
